# what-to-watch-bot

./: Cargo.toml  docker-compose.yml
.cargo/: config
.github/workflows/: build.yml  deploy-app.yml  pr.yml
migrations/2022-10-16-140503_create_users/: up.sql
src/: bot.rs  main.rs  message.rs  models.rs  schema.rs  step.rs  tls.rs
steps/: 0.yml
