[package]
name = "what-to-watch-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.20", features = ["full"]}
tokio = {version = "1.21.1", features = ["full"]}
random-string = "1.0.0"
hyper-tls = "0.5.0"
json = "0.12.4"
diesel = { version = "2.0.2", features = ["postgres"] }
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
serde_yaml = "0.9.14"
yaml-rust = "0.4.5"
urlencoding = "2.1.2"
